DemoMyApp/src/objects/Visa_Fees__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Fees__c</fullName>
        <label>Visa Fees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Visa_Type__c</fullName>
        <label>Visa Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Visa Fee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Visa Fees Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visa Fees</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>